--- a/web/templates/layouts/base.gohtml
+++ b/web/templates/layouts/base.gohtml
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="/css/bootadmin.min.css">
 
-    <title>BootAdmin</title>
+    <title>Campaign App</title>
 </head>
 <body class="bg-light">
 
 <nav class="navbar navbar-expand navbar-dark bg-primary">
     <a class="sidebar-toggle mr-3" href="#"><i class="fa fa-bars"></i></a>
-    <a class="navbar-brand" href="#">BWASTARTUP</a>
+    <a class="navbar-brand" href="#">ManBell</a>
 
     <div class="navbar-collapse collapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
-                <a href="#" id="dd_user" class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Doe</a>
+                <a href="#" id="dd_user" class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>User</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd_user">
                     <a href="/logout" class="dropdown-item">Logout</a>
                 </div>
